<?xml version="1.0"?>
<package format="3">
  <name>ur_velocity_ctrl</name>
  <version>0.0.1</version>
  <description>Velocity control node for real UR3e using ROS 2 Jazzy.</description>

  <maintainer email="cayoalmeida0@gmail.com">cayo-sousa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>